force-app/main/default/objects/Delivery_Estimate__c/Delivery_Estimate__c.object-meta.xml
<CustomObject>
    <label>Delivery Estimate</label>
    <nameField>
        <label>Delivery Estimate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>