force-app/main/default/objects/Delivery_Estimate__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <formula>if(LEN(Opportunity_Name__r.Account.BillingStreet)&gt;0, Opportunity_Name__r.Account.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Opportunity_Name__r.Account.BillingCity)&gt;0, Opportunity_Name__r.Account.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Opportunity_Name__r.Account.BillingState)&gt;0, Opportunity_Name__r.Account.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Opportunity_Name__r.Account.BillingPostalCode)&gt;0, Opportunity_Name__r.Account.BillingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(Opportunity_Name__r.Account.BillingCountry) &gt;0, Opportunity_Name__r.Account.BillingCountry,&quot;&quot;)</formula>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>