force-app/main/default/objects/Delivery_Estimate__c/fields/Building_Count__c.field-meta.xml
<CustomField>
    <fullName>Building_Count__c</fullName>
    <description>How many buildings does the delivery site consist of?</description>
    <inlineHelpText>How many buildings does the delivery site consist of?</inlineHelpText>
    <label>Building Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>