force-app/main/default/objects/Delivery_Estimate__c/fields/Check_here_to_Confirm_Delivery_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Check_here_to_Confirm_Delivery_Estimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Save to Confirm Estimate Request</label>
    <type>Checkbox</type>
</CustomField>