force-app/main/default/objects/Delivery_Estimate__c/fields/club_house__c.field-meta.xml
<CustomField>
    <fullName>club_house__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is there a club house or model home?</label>
    <type>Checkbox</type>
</CustomField>