force-app/main/default/objects/Delivery_Estimate__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Please enter any additional project information that may affect the delivery estimate (i.e. multiple buildings, different number of floors/units per building, etc.)</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>