force-app/main/default/objects/Delivery_Estimate__c/fields/Delivery_Estimate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Estimate_Amount__c</fullName>
    <label>Delivery Estimate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>