force-app/main/default/objects/Delivery_Estimate__c/fields/Expected_Delivery_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Completion_Date__c</fullName>
    <description>Date the customer expects all deliveries for the project to be completed.</description>
    <inlineHelpText>Date the customer expects all deliveries for the project to be completed.</inlineHelpText>
    <label>Expected Delivery Completion Date</label>
    <type>Date</type>
</CustomField>