force-app/main/default/objects/Delivery_Estimate__c/fields/First_Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Expected_Delivery_Date__c</fullName>
    <description>Enter the first expected delivery date</description>
    <inlineHelpText>Enter the first expected delivery date</inlineHelpText>
    <label>First Expected Delivery Date</label>
    <type>Date</type>
</CustomField>