force-app/main/default/objects/Delivery_Estimate__c/fields/go_across_parking_lot__c.field-meta.xml
<CustomField>
    <fullName>go_across_parking_lot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Go through or up a parking lot</label>
    <type>Checkbox</type>
</CustomField>