force-app/main/default/objects/Delivery_Estimate__c/fields/Is_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_Project__c</fullName>
    <formula>Opportunity_Name__r.Account.Is_Project__c</formula>
    <label>Is Project</label>
    <type>Checkbox</type>
</CustomField>