force-app/main/default/objects/Delivery_Estimate__c/fields/Is_Union__c.field-meta.xml
<CustomField>
    <fullName>Is_Union__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Union labor for off load and complete installs</description>
    <inlineHelpText>Union labor for off load and complete installs</inlineHelpText>
    <label>Is Union</label>
    <type>Checkbox</type>
</CustomField>