force-app/main/default/objects/Delivery_Estimate__c/fields/Last_Delivery_Estimate_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Delivery_Estimate_Request_Date__c</fullName>
    <label>Last Delivery Estimate Request Date</label>
    <type>Date</type>
</CustomField>