force-app/main/default/objects/Delivery_Estimate__c/fields/Minor_delivery_first__c.field-meta.xml
<CustomField>
    <fullName>Minor_delivery_first__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minor delivery first</label>
    <type>Checkbox</type>
</CustomField>