force-app/main/default/objects/Delivery_Estimate__c/fields/of_Estimate_Details__c.field-meta.xml
<CustomField>
    <fullName>of_Estimate_Details__c</fullName>
    <label># of Estimate Details</label>
    <summaryForeignKey>Delivery_Estimate_Detail__c.Delivery_Estimate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>