force-app/main/default/objects/Delivery_Estimate__c/fields/of_Feedback_Received__c.field-meta.xml
<CustomField>
    <fullName>of_Feedback_Received__c</fullName>
    <label># of Feedback Received</label>
    <summaryForeignKey>Delivery_Estimate_Feedback__c.Delivery_Estimate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>