force-app/main/default/objects/Delivery_Estimate__c/fields/Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Operations Manager</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Delivery_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>