force-app/main/default/objects/Delivery_Estimate__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Delivery Estimates</relationshipLabel>
    <relationshipName>Delivery_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>