force-app/main/default/objects/Delivery_Estimate__c/fields/Secured_Lot__c.field-meta.xml
<CustomField>
    <fullName>Secured_Lot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the lot secured?</label>
    <type>Checkbox</type>
</CustomField>