force-app/main/default/objects/Delivery_Estimate__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Shipping address for project opportunities</description>
    <formula>if(LEN( Opportunity_Name__r.Shipping_Street__c )&gt;0, Opportunity_Name__r.Shipping_Street__c &amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN( Opportunity_Name__r.Shipping_City__c )&gt;0, Opportunity_Name__r.Shipping_City__c &amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN( Opportunity_Name__r.Shipping_State_Province__c )&gt;0, Opportunity_Name__r.Shipping_State_Province__c &amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN( Opportunity_Name__r.Shipping_Zip_Postal_Code__c )&gt;0, Opportunity_Name__r.Shipping_Zip_Postal_Code__c ,&quot;&quot;)</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>