force-app/main/default/objects/Delivery_Estimate__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <formula>Opportunity_Name__r.Shipping_State_Province__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping State</label>
    <type>Text</type>
</CustomField>