force-app/main/default/objects/Delivery_Estimate__c/fields/Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip__c</fullName>
    <formula>Opportunity_Name__r.Shipping_Zip_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Zip</label>
    <type>Text</type>
</CustomField>