force-app/main/default/objects/Delivery_Estimate__c/fields/Trailer_53_Ft_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Trailer_53_Ft_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can the site accommodate 53&#39; truck for 2 hours?</inlineHelpText>
    <label>Site accessible by 53&#39; trailer for 2 hr</label>
    <type>Checkbox</type>
</CustomField>