force-app/main/default/objects/Delivery_Estimate__c/fields/Units_Per_Building__c.field-meta.xml
<CustomField>
    <fullName>Units_Per_Building__c</fullName>
    <label>How many units per building</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>