force-app/main/default/objects/Delivery_Estimate__c/fields/Working_Elevator__c.field-meta.xml
<CustomField>
    <fullName>Working_Elevator__c</fullName>
    <inlineHelpText>Delivery cost could increase as much as 40% if elevator is not working</inlineHelpText>
    <label>Working Elevator Available?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>