force-app/main/default/objects/Delivery_Estimate__c/validationRules/No_Estimate_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Estimate_Details</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Check_here_to_Confirm_Delivery_Estimate__c = TRUE, 
 of_Estimate_Details__c  &lt; 1)</errorConditionFormula>
    <errorMessage>A Delivery Estimate Detail is required before a delivery estimate can be requested. Please create and complete a Delivery Estimate Detail</errorMessage>
</ValidationRule>