force-app/main/default/objects/Delivery_Estimate__c/validationRules/No_Related_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Related_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Check_here_to_Confirm_Delivery_Estimate__c = TRUE, 
 ISNULL(Opportunity_Name__c ))</errorConditionFormula>
    <errorMessage>The Delivery Estimate must be tied to an Opportunity</errorMessage>
</ValidationRule>