force-app/main/default/objects/Delivery_Estimate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Is_Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>of_Estimate_Details__c</columns>
    <columns>Quote__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>