force-app/main/default/objects/Delivery_Estimate__c/listViews/New_Delivery_Estimates.listView-meta.xml
<ListView>
    <fullName>New_Delivery_Estimates</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Is_Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>of_Estimate_Details__c</columns>
    <columns>Quote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>of_Estimate_Details__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>of_Feedback_Received__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Quote__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>1. New Delivery Estimates</label>
</ListView>