force-app/main/default/objects/Delivery_Estimate__c/listViews/X2_Pending_Innovel_Team.listView-meta.xml
<ListView>
    <fullName>X2_Pending_Innovel_Team</fullName>
    <columns>Last_Delivery_Estimate_Request_Date__c</columns>
    <columns>NAME</columns>
    <columns>Is_Project__c</columns>
    <columns>of_Estimate_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Operations_Manager__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>of_Estimate_Details__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>of_Feedback_Received__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Quote__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Last_Delivery_Estimate_Request_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>2. Pending Innovel Team</label>
</ListView>